fix scrollbar animation bug

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 .App {
   text-align: center;
 
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .App-logo {
